--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ keosd.md
 teos/source/conf.py
 teos/teos_lib/eos_interface.1.cpp#
 templates/contracts/tasks
+.vscode/tasks.json
+.vscode/tasks.json
