--- a/templates/contracts/eosio.token_t/.vscode/tasks.json
+++ b/templates/contracts/eosio.token_t/.vscode/tasks.json
@@ -59,6 +59,14 @@
             "https://eosio.github.io/eos/group__contractdev.html"
         ],
         "problemMatcher": []
+    },
+    {
+        "taskName": "unittest",
+        "type": "shell",
+        "windows": {
+            "command": "source ~/.profile; python3 ./test/unittest1.py"
+        }
+        
     }
 ]
 }
