--- a/templates/contracts/skeleton_t/CMakeLists.txt
+++ b/templates/contracts/skeleton_t/CMakeLists.txt
@@ -7,4 +7,8 @@ add_custom_command(OUTPUT @CONTRACT_NAME@.wast COMMAND ${teos} build contract ${
 add_custom_target(abi ALL DEPENDS @CONTRACT_NAME@.abi)
 add_custom_target(wast ALL DEPENDS @CONTRACT_NAME@.wast)
 
-add_test(NAME unittest COMMAND python3 ${CMAKE_SOURCE_DIR}/test/test.py)
+add_test(NAME unittest COMMAND python3 ${CMAKE_SOURCE_DIR}/test/unittest1.py)
+add_test(NAME test COMMAND python3 ${CMAKE_SOURCE_DIR}/test/test1.py ${CMAKE_SOURCE_DIR})
+
+# ctest -V --test-regex "unittest"
+# ctest -V --test-regex "test"
