--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,10 @@ Makefile
 !/tests/test1.py
 !/tests/test2.py
 !/tests/test3.py
-!/tests/test4.py
-!/tests/unittest.py
 !/tests/unittest1.py
-!/tests/unittest2.py
-!/tests/unittest3.py
-!/tests/unittest4.py
+!/tests/unit.test1.py
+!/tests/unit.test2.py
+!/tests/unit.test3.py
 !/pyteos/docs/build
 
 **/Debug
