--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Makefile
 !/tests/test1.py
 !/tests/test2.py
 !/tests/test3.py
+!/tests/unit.test.py
 !/tests/unit.test1.py
 !/tests/unit.test1a.py
 !/tests/unit.test2.py
