--- a/templates/contracts/skeleton/CMakeLists.txt
+++ b/templates/contracts/skeleton/CMakeLists.txt
@@ -6,7 +6,7 @@ set( teos $ENV{EOSIO_EOSFACTORY_DIR}/teos/build/teos/teos )
 add_custom_target( abi ALL COMMAND ${teos} generate abi ${CMAKE_SOURCE_DIR}/src )
 add_custom_target( wast ALL COMMAND ${teos} build contract ${CMAKE_SOURCE_DIR}/src )
 
-add_test( NAME unittest COMMAND python3 ${CMAKE_SOURCE_DIR}/test/unit.test1.py )
+add_test( NAME unittest COMMAND python3 ${CMAKE_SOURCE_DIR}/test/unittest1.py )
 add_test( NAME test COMMAND python3 ${CMAKE_SOURCE_DIR}/test/test1.py ${CMAKE_SOURCE_DIR} )
 
 # ctest -V -R ^unittest$
