--- a/templates/contracts/eosio.token/.vscode/tasks.json
+++ b/templates/contracts/eosio.token/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",   
 "tasks": [
     {
-        "label": "compile",
+        "taskName": "Compile",
         "type": "shell",
         "windows": {
             "command": "source ~/.profile; mkdir -p build; ${env:eosf} build contract \"${workspaceFolder}\"/src -c"
@@ -23,7 +23,7 @@
         ]
     },
     {
-        "label": "build",
+        "taskName": "Build",
         "type": "shell",
         "windows": {
             "command": "source ~/.profile; mkdir -p build; ${env:eosf} generate abi \"${workspaceFolder}\"/src;${env:eosf} build contract \"${workspaceFolder}\"/src"
@@ -47,7 +47,45 @@
         ]
     },
     {
-        "taskName": "API",
+        "taskName": "Unittest",
+        "type": "shell",
+        "windows": {
+            "command": "source ~/.profile; python3 ./test/unittest1.py"
+        },
+        "osx": {
+            "command": "source ~/.bash_profile; python3 ./test/unittest1.py"
+        },
+        "linux": {
+            "command": "python3 ./test/unittest1.py"
+        },
+        "presentation": {
+            "reveal": "always",
+            "panel": "dedicated"
+        },
+        "problemMatcher": [
+        ]
+    },
+    {
+        "taskName": "Test",
+        "type": "shell",
+        "windows": {
+            "command": "source ~/.profile; python3 ./test/test1.py \"${workspaceFolder}\""
+        },
+        "osx": {
+            "command": "source ~/.bash_profile; python3 ./test/test1.py \"${workspaceFolder}\""
+        },
+        "linux": {
+            "command": "python3 ./test/test1.py \"${workspaceFolder}\""
+        },        
+        "presentation": {
+            "reveal": "always",
+            "panel": "dedicated"
+        },
+        "problemMatcher": [
+        ]
+    },
+    /*{
+        "taskName": "EOSIO API",
         "type": "shell",
         "windows": {
             "command": "explorer.exe"
@@ -67,45 +105,7 @@
         },
         "problemMatcher": [
         ]
-    },
-    {
-        "taskName": "unittest",
-        "type": "shell",
-        "windows": {
-            "command": "source ~/.profile; python3 ./test/unittest1.py"
-        },
-        "osx": {
-            "command": "source ~/.bash_profile; python3 ./test/unittest1.py"
-        },
-        "linux": {
-            "command": "python3 ./test/unittest1.py"
-        },
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
-        },
-        "problemMatcher": [
-        ]
-    },
-    {
-        "taskName": "test",
-        "type": "shell",
-        "windows": {
-            "command": "source ~/.profile; python3 ./test/test1.py \"${workspaceFolder}\""
-        },
-        "osx": {
-            "command": "source ~/.bash_profile; python3 ./test/test1.py \"${workspaceFolder}\""
-        },
-        "linux": {
-            "command": "python3 ./test/test1.py \"${workspaceFolder}\""
-        },        
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
-        },
-        "problemMatcher": [
-        ]
-    }
+    }*/
 ]
 }
-
+ 
