--- a/teos/teos/CMakeLists.txt
+++ b/teos/teos/CMakeLists.txt
@@ -10,7 +10,7 @@ set( TEST_HTTP_ADDRESS "eos-testapi.tokenika.io:8888" )
 set( Boost_USE_STATIC_LIBS ON )
 set( Boost_USE_MULTITHREADED ON )
 set( Boost_USE_STATIC_RUNTIME OFF )
-set( BOOST_ROOT "$ENV{HOME}/opt/boost_1_66_0" )
+set( BOOST_ROOT "$ENV{U_HOME}/opt/boost_1_66_0" )
 
 find_package(Boost 1.66 REQUIRED COMPONENTS 
   thread  
