corrections, remote node

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -1,6 +1,9 @@
 # the endpoint upon which to listen for incoming connections (eosio::bnet_plugin)
 bnet-endpoint = 0.0.0.0:4321
 
+# this peer will request only irreversible blocks from other nodes (eosio::bnet_plugin)
+bnet-follow-irreversible = 0
+
 # the number of threads to use to process network messages (eosio::bnet_plugin)
 # bnet-threads = 
 
@@ -9,6 +12,23 @@ bnet-endpoint = 0.0.0.0:4321
 
 # this peer will request no pending transactions from other nodes (eosio::bnet_plugin)
 bnet-no-trx = false
+
+# The string used to format peers when logging messages about them.  Variables are escaped with ${<variable name>}.
+# Available Variables:
+#    _name  	self-reported name
+# 
+#    _id    	self-reported ID (Public Key)
+# 
+#    _ip    	remote IP address of peer
+# 
+#    _port  	remote port number of peer
+# 
+#    _lip   	local IP address connected to peer
+# 
+#    _lport 	local port number connected to peer
+# 
+#  (eosio::bnet_plugin)
+bnet-peer-log-format = ["${_name}" ${_ip}:${_port}]
 
 # the location of the blocks directory (absolute path or relative to application data dir) (eosio::chain_plugin)
 blocks-dir = "blocks"
@@ -39,6 +59,9 @@ contracts-console = false
 
 # Contract account added to contract blacklist (may specify multiple times) (eosio::chain_plugin)
 # contract-blacklist = 
+
+# Action (in the form code::action) added to action blacklist (may specify multiple times) (eosio::chain_plugin)
+# action-blacklist = 
 
 # Track actions which match receiver:action:actor. Actor may be blank to include all. Receiver and Action may not be blank. (eosio::history_plugin)
 # filter-on = 
@@ -112,6 +135,25 @@ sync-fetch-span = 100
 
 # maximum sizes of transaction or block messages that are sent without first sending a notice (eosio::net_plugin)
 max-implicit-request = 1500
+
+# The string used to format peers when logging messages about them.  Variables are escaped with ${<variable name>}.
+# Available Variables:
+#    _name  	self-reported name
+# 
+#    _id    	self-reported ID (64 hex characters)
+# 
+#    _sid   	first 8 characters of _peer.id
+# 
+#    _ip    	remote IP address of peer
+# 
+#    _port  	remote port number of peer
+# 
+#    _lip   	local IP address connected to peer
+# 
+#    _lport 	local port number connected to peer
+# 
+#  (eosio::net_plugin)
+peer-log-format = ["${_name}" ${_ip}:${_port}]
 
 # Enable block production, even if the chain is stale. (eosio::producer_plugin)
 # enable-stale-production = false
